# courtlistener

./: .dockerignore  .editorconfig  .env.bulk.example  .env.celery.example  .env.celery_bulk.example  .env.example  .eslintrc.js  .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .imgbotconfig  .pre-commit-config.yaml  .project  .pydevproject  .semgrepignore  .travis.yml  .watchmanconfig  CLAUDE.md  CODING_TASK_README.md  CONTACT.txt  COPYRIGHT.txt  DEVELOPING.md  FRONTEND.md  INSTALL.md  INSTALL.txt  LICENSE.txt  MIGRATIONS.md  README.md  README.txt  SECURITY.md  TEST_PERF_FINDINGS.md  TODO.txt  UpdatingToPython3-8.md  ansible.cfg  assign_conn_opinion_types.py  check_conn_citations.py  contributor_license_agreement.txt  courts.json  docket_options.json  (+28 more)
.circleci/: Dockerfile  Makefile  activate.sh  config.yml  configure-courtlistener.sh  configure-postgres.sh  configure-redis.sh  pg_hba.conf  pgdg.list  pgpass  version.txt
.claude/: pr_update_draft.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  advanced-issue-labeler.yml  codeql-config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  general.yml
.github/scripts/: frontend_checks.py
.github/workflows/: black.yml  codeql-analysis-base.yml  codeql-analysis-full.yml  codeql-analysis.yml  docker-build-dev.yml  docker-build.yml  flp-dependencies-pr.yml  flp-dependencies.yml  frontend-lint.yml  issue-labeler.yml  lint.yml  new-build.yml  semgrep.yml  sentry-release.yml  sync-upstream.yml  tests.py  tests.yml
Code/: hg-test.txt
Design/: favorites-design.txt
Design/design-v3/: Requirements.txt  results.html
Documents/: Interview Template.odt  Interview Template.rtf  Interviewee Tracking.csv  Legal Blog List.ods  MoSCoW Analysis, 2010-01-19, Final.odt  MoSCoW Analysis.odt  Monetization concepts.txt  Notes on scraping the supreme court opinions from resource.org.txt  Project Planning Gantt Milestones.ods  Rebasing notes.txt  Script for Meeting with Law Librarians, 12-1-09.odt  Search Engine Analysis, 2010-02-06.ods  Sphinx and Django-Sphinx install notes.txt  URL Patterns Proposal.odt  lawcat_proposal_v2.doc  lawcat_proposal_v3.doc
Documents/Design Docs/: Notes on scraping the supreme court opinions from resource.org.txt  Search Engine Analysis, 2010-02-06.ods  URL Patterns Proposal.odt
Documents/Final Paper (Latex)/: Outline.txt  README.txt  appendixI.tex  bibliography.bib  features.tex  future.tex  future.txt  intro.tex  paper.tex  problemdefine.txt  solutiondesign.tex  solutiondesign.txt  techdecisions.tex  techdecisions.txt
Documents/PDF to HTML Analysis and Testing/: Analysis Results.html  pdftohtml-complex-noframes-noimages-10thCircuit-06-6247.html  (+35 more)
OCR/: eng.lincoln.box  eng.old-english.box  eng.times-special-chars.box  eng.traineddata  extract_font_metadata_from_files.py  font_properties  frequent_words.txt  infrequent_words.txt  lincoln.doc  old-english.doc  standard-training-text.txt  text_and_box_file_merger.py  times-new-roman-special-chars.doc
OldCode/: hg-test.txt
Presentations/: General Presentation, Op-Alert, 2010-01-27.odp  General Presentation, Op-Alert, 2010-01-27.ppt
Resource.org/: f2-deployment-readme.txt  scraper-requirements-and-notes.txt
Solr/: schema.xml  solr-stats.md  stats.txt
Solr/conf/: schema.xml  (+8 more)
SupremeCourtCleanup/: date_of_decisions.csv  scotus_date_cleaner.py
alert/: MySQL Snippets.txt  PDF_to_pdf.py  account_management.py  back_scrape.py  dump_all_cases.py  humans.txt  manage.py  pdf_date_fixer.py  ping_all_search_engines.py  resource_org_updater.py  robots.txt  scrape_and_encode_audio.py  scrape_and_parse.py  send_emails.py  settings.py  sitemap.py  sphinx.conf  stat_maker.py  urls.py
alert-django/: manage.py  settings.py  urls.py
ansible/: 0001_update_solr.yml  0002_create_recap_core.yml  defaults.yml  get_vars.sh  hosts  set_vars.yml  test.yml  upgrade.yml
apache/: courtlistener.com.conf  crt.li.conf  django.wsgi  matomo.courtlistener.com.conf  mod_xsendfile.c  ssl-courtlistener.com.conf  ssl-matomo.courtlistener.com.conf  ssl-www.courtlistener.com.conf  www.courtlistener.com.conf
citations/: add_citations.py  find_citations.py  html_utils.py  match_citations.py  reporter_tokenizer.py
cl/: .eslintignore  .eslintrc.js  __init__.py  asgi.py  babel.config.js  celery.py  celery_init.py  humans.txt  package-lock.json  package.json  settings.py  sitemap.py  tasks.py  tsconfig.json  urls.py  webpack-stats.json  webpack.config.js  workers.py
cleaning-scripts/: correct_citations_with_untitled_disposition_as_casename_182.py  move-westcite-to-correct-column61.py  not_scotus_case_name_cleaner_188.py  scotus_case_name_cleaner_96.py
cleaning_scripts/: 264_move_from_dcal_to_edcal.py  clean_lawbox_date_ranges.py  correct_citations_with_untitled_disposition_as_casename_182.py  correct_links_to_resource_org_186.py  correct_state_cases.py  delete_duplicate_cases_by_sha1.py  fix_mojibake_in_cases_94.py  make_alerts_support_new_courts_202.py  make_slugs_for_citations_that_lack_them_243.py  move-westcite-to-correct-column61.py  not_scotus_case_name_cleaner_188.py  ocr_old_pdfs_77.py  ocr_pdfs_post_new_server.py  pdf_date_fixer_71.py  re-run_anonymize_function_across_corpus_195.py  remove_leading_parens_212.py  remove_leading_slashes_212.py  resave_docs_that_had_encoding_errors.py  scotus_case_name_cleaner_96.py
data-dumps/: data-dumper.py
designs/: readme.md
geany-projects/: visual-redesign-favorites-feature.geany
init-scripts/: README.txt  audio-scraper-init-script.sh  celeryd  scraper  scraper-init-script.sh  solr
log-scripts/: celery  scraper  solr  sphinx
ocr/: file-to-word-list.py  mysql-example-dumper.sql
patches/: sunburnt-remove-mx-datetime-dependency.patch
recap/: README.md  recap_constants.py
recap_merge/: README.md  downloader_constants.py  recap_csv_file_creator.py  recap_docket_downloader.py  recap_docket_downloader_task_creator.py
scripts/: 001-export-schema.sh  002-generate-import-script.sh  003-bulk-data-export.sh  bulk-data-pipeline.sh  bulk_tables.csv  make_bulk_data.sh  merge_tree_erd.py
search/: models.py
(+29312 files in other folders)
