[tool.poetry]
authors = ["Mike Lissner <mike@free.law>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
]
description = "A free and powerful system for awareness and research of the American judicial system."
documentation = "https://github.com/freelawproject/courtlistener/wiki"
homepage = "https://www.courtlistener.com/"
include = ["manage.py"]
keywords = ["legal", "courts", "databases", "judiciary", "laws"] # Max: 5
license = "AGPL-3.0" # Should be spdx ID: https://spdx.org/licenses/
maintainers = ["Mike Lissner <mike@free.law>"]
name = "cl"
readme = "README.md"
repository = "https://github.com/freelawproject/courtlistener"
version = "0.14.24"

[tool.poetry.scripts]
cl-manage = "manage:main"

[tool.poetry.dependencies]
ada-url = "^1.15.0"
argparse = "*"
beautifulsoup4 = "==4.12.*"
celery = "^5.4.0"
certifi = "^2024.12.14"
courts-db = "*"
disposable-email-domains = "*"
Django = "^5.1.5"
django-cache-memoize = "==0.*"
django-cors-headers = "^4.6.0"
django-csp = "^3.8"
django-extensions = "^3.2.3"
django-filter = "^24.3"
django-localflavor = "^4.0"
django-markdown-deux = "^1.0.6"
django-mathfilters = "*"
django-pghistory = "^3.5.1"
django-ratelimit = "^4.1.0"
django-storages = "^1.14.3"
djangorestframework = {git = "https://github.com/encode/django-rest-framework.git", rev = "cc3c89a11c7ee9cf7cfd732e0a329c318ace71b2"}
djangorestframework-xml = "^2.0.0"
feedparser = "^6.0.10"
httplib2 = "^0.22.0"
internetarchive = "^4.1.0"
ipaddress = "^1.0.16"
itypes = "^1.1.0"
kombu = "^5.4.2"
lxml = "^5.3.0"
markdown2 = "==2.5.*"
natsort = "^8.4.0"
ndg-httpsclient = "^0.5.1"
networkx = "^3.4.2"
nose = "*"
pandas = "^2.2.3"
pillow = "*"
pycparser = "^2.22"
pyopenssl = "*"
pyparsing = "^3.2.0"
python = ">=3.13, <3.14"
python-dateutil = "^2.9.0"
python-magic = "^0.4.27"
pytz = "*"
pyyaml = "^6.0.2"
redis = "^5.1.1"
requests = "^2.32.3"
simplejson = "^3.19.3"
timeout-decorator = "*"
unidecode = "*"
usaddress = "^0.5.11"
djangorestframework-filters = "1.0.0.dev2"
gunicorn = "^23.0.0"
django-hCaptcha = "^0.2.0"
reporters-db = "*"
django-waffle = "^4.1.0"
nameparser = "^1.1.3"
eyecite = "*"
scipy = "^1.15.1"
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
datasketch = "^1.6.5"
PyStemmer = "^2.2.0.3"
factory-boy = "^3.3.1"
django-elasticsearch-dsl = "^8.0"
django-override-storage = "^0.3.2"
django-environ = "^0.11.2"
judge-pics = "^2.0.5"
django-admin-cursor-paginator = "^0.1.6"
sentry-sdk = {extras = ["celery", "django"], version = "^2.19.2"}
selenium = "^4.25.0"
ipython = "^8.28.0"
time-machine = "^2.16.0"
dateparser = "1.2.0"
types-dateparser = "^1.2.0.20240420"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
daphne = "^4.1.2"
httpx = {extras = ["http2"], version = "^0.28.1"}
django-model-utils = "^5.0.0"
django-permissions-policy = "^4.22.0"
tiktoken = "^0.8.0"
hyperscan = "^0.7.8"
openai = "^1.58.1"
seal-rookery = "^2.2.5"
types-pytz = "^2024.2.0.20241003"
psycopg = {version = "3.2.3", extras = ["binary", "pool"]}
boto3 = "^1.35.44"
django-tailwind = "^3.8.0"
drf-dynamic-fields = "^0.4.0"
django-ses = {extras = ["events"], version = "^4.3.2"}
juriscraper = "^2.6.26"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
types-redis = "^4.6.0.20241004"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
flake8 = "^7.1.1"
exrex = "^0.11.0"
tblib = "^3.0.0"
flynt = "^1.0.1"
mypy = "^1.12.1"
types-python-dateutil = "^2.9.0.20241003"
types-requests = "^2.32.0.20241016"
django-stubs = "^5.1.0"
djangorestframework-stubs = "^3.15.1"
black = "^24.10.0"
types-simplejson = "^3.19.0.20240801"
lxml-stubs = "^0.5.1"
django-debug-toolbar = "^4.4.6"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}

[tool.black]
include = '''
(
    cl         # Just include a few directories for now
)*\.pyi?$
'''
exclude = '''
(
      \.eggs
    | .*\.egg-info
    | .*migrations.*
    | \.mypy_cache
    | __pycache__
    | \.venv
)
'''
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
skip_glob = "*/migrations/*.py"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "79"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
