[project]
name = "cl"
version = "1"
description = "A free and powerful system for awareness and research of the American judicial system."
requires-python = ">=3.13,<3.14"
readme = "README.md"
authors = [
  { name = "Mike Lissner", email = "mike@free.law" },
]
keywords = ["legal", "courts", "databases", "judiciary", "laws"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Intended Audience :: Legal Industry",
]
urls.Home = "https://www.courtlistener.com/"
urls.Repository = "https://github.com/freelawproject/courtlistener"
urls.Documentation = "https://github.com/freelawproject/courtlistener/wiki"
license = " AGPL-3.0-only"
license-files = [ "LICENSE.txt" ]

dependencies = [
  "ada-url>=1.28.0",
  "beautifulsoup4>=4.14.3",
  "celery>=5.6.2",
  "certifi>=2025.1.31",
  "courts-db",
  "disposable-email-domains",
  "Django>=6.0, <6.1",
  "django-cache-memoize",
  "django-cors-headers>=4.9.0",
  "django-csp>=4.0",
  "django-extensions>=4.1",
  "django-filter>=25.2",
  "django-localflavor>=5.0",
  "django-markdown-deux>=1.0.6",
  "django-mathfilters",
  "django-pghistory>=3.9.1",
  "django-ratelimit>=4.1.0",
  "django-storages>=1.14.6",
  "djangorestframework>=3.16.1",
  "djangorestframework-xml>=2.0.0",
  "feedparser>=6.0.12",
  "httplib2>=0.31.0",
  "internetarchive>=5.7.1",
  "ipaddress>=1.0.16",
  "itypes>=1.1.0",
  "kombu>=5.5.1",
  "lxml>=6.0.2",
  "markdown2>=2.5.4",
  "natsort>=8.4.0",
  "ndg-httpsclient>=0.5.1",
  "networkx>=3.6.1",
  "nose",
  "pandas>=2.3.3",
  "pillow",
  "pycparser>=2.22",
  "pyopenssl",
  "pyparsing>=3.3.1",
  "python-dateutil>=2.9.0",
  "python-magic>=0.4.27",
  "pytz",
  "pyyaml>=6.0.3",
  "redis>=7.1.0",
  "requests>=2.32.5",
  "simplejson>=3.20.2",
  "timeout-decorator",
  "unidecode",
  "usaddress>=0.5.16",
  "djangorestframework-filters==1.0.0.dev2",
  "gunicorn>=23.0.0",
  "django-hCaptcha>=0.2.0",
  "reporters-db",
  "django-waffle>=5.0.0",
  "nameparser>=1.1.3",
  "eyecite",
  "scipy>=1.15.2",
  "scikit-learn>=1.8.0",
  "numpy>=2.4.0",
  "datasketch>=1.8.0",
  "PyStemmer>=3.0.0",
  "factory-boy>=3.3.3",
  "django-override-storage>=0.3.2",
  "django-environ>=0.12.0",
  "judge-pics>=2.0.5",
  "django-admin-cursor-paginator>=0.1.7",
  "sentry-sdk[celery,django]>=2.49.0",
  "selenium>=4.30.0",
  "ipython>=9.9.0",
  "time-machine>=3.2.0",
  "dateparser==1.2.2",
  "types-dateparser>=1.2.2.20250809",
  "uvicorn[standard]>=0.40.0",
  "daphne>=4.2.1",
  "httpx[http2]>=0.28.1",
  "django-model-utils>=5.0.0",
  "django-permissions-policy>=4.28.0",
  "tiktoken>=0.9.0",
  "hyperscan>=0.8.0",
  "openai>=2.14.0",
  "seal-rookery>=2.3.1",
  "types-pytz>=2025.2.0.20251108",
  "psycopg[binary,pool]>=3.3.2",
  "boto3>=1.42.24",
  "django-tailwind~=3.9.1",
  "django-ses[events]>=4.6.0",
  "django-cotton>=2.6.0",
  "django-cursor-pagination>=0.3.0",
  "django-elasticsearch-dsl>=8.0",
  "juriscraper @ git+https://github.com/ttys0dev/juriscraper.git@2d53ce5bc623bb3b1a59ca48fbd1b69944a6a736",
  "instructor>=1.14.1",
  "django-s3-express-cache>=0.1.0",
  "zohocrmsdk8-0==4.0.0",
  "django-prometheus>=2.4.1",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "types-redis>=4.6.0.20241004",
  "pytest>=9.0.2",
  "pytest-django>=4.11.1",
  "exrex>=0.12.0",
  "tblib>=3.2.2",
  "mypy>=1.15.0",
  "types-python-dateutil>=2.9.0.20251115",
  "types-requests>=2.32.4.20260107",
  "django-stubs>=5.2.8",
  "djangorestframework-stubs>=3.16.6",
  "types-simplejson>=3.20.0.20250822",
  "lxml-stubs>=0.5.1",
  "django-debug-toolbar>=6.1.0",
  "django-tailwind[reload]~=3.9.1",
  "responses>=0.25.8",
]

[tool.uv.sources]
juriscraper = {git = "https://github.com/ttys0dev/juriscraper.git", rev = "2d53ce5bc623bb3b1a59ca48fbd1b69944a6a736"}

[tool.ruff]
line-length = 79
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.select = [
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
  # To fix:
  "E722",
  "E731",
  "F403",
  "F811",
  "F821",
  "F841",
  "UP008",
]
